# english-turkish-dictionary

./: Cargo.toml  LICENSE  README.md
src/: main.rs
